--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.0.0",
     "core-js": "^3.8.3",
     "normalize.css": "^8.0.1",
+    "vee-validate": "^4.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
@@ -33,7 +34,9 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "style-resources-loader": "^1.4.1",
+    "vue-cli-plugin-style-resources-loader": "~0.1.5"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
